--- a/UC9-SA2/css/style.css
+++ b/UC9-SA2/css/style.css
@@ -93,6 +93,10 @@ h4.card-title {
 
 /* FOOTER */
 
+footer span {
+    display: none;
+}
+
 footer {
     display: flex;
     justify-content: space-around;
@@ -213,6 +217,19 @@ header button {
         font-size: 20px;
     }
 
+    footer span {
+        display: inline-block;
+        margin-left: 20px;
+    }
+
+    footer .hide ~ p {
+        display: none;
+    }
+
+    footer .hide + ul {
+        display: none;
+    }
+
     /* menu */
 
     .hide a{
@@ -245,5 +262,7 @@ header button {
         font-size: 12px;
         line-height: 1.5;
     }
+
+
 
   }
